--- a/services/registry.yaml
+++ b/services/registry.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: registry
         image: registry:2
+        imagePullPolicy: Always
         ports:
         - name: main
           containerPort: 5000
