--- a/services/unify.yaml
+++ b/services/unify.yaml
@@ -19,7 +19,8 @@ spec:
       hostNetwork: true
       containers:
       - name: unifi
-        image: jacobalberty/unifi:latest
+        image: jacobalberty/unifi:stable-6
+        imagePullPolicy: Always
         ports:
         - containerPort: 3478  # UDP Port used for STUN.
           protocol: UDP
