--- a/homeautomation/grafana.yaml
+++ b/homeautomation/grafana.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: monitoringartist/grafana-xxl # grafana/grafana
+        image: monitoringartist/grafana-xxl:7.1 # grafana/grafana
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         volumeMounts:
