--- a/nextcloud/app.yaml
+++ b/nextcloud/app.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: app
         image: nextcloud:fpm
+        imagePullPolicy: Always
         env:
         - name: MYSQL_HOST
           value: db
