--- a/nextcloud/cron.yaml
+++ b/nextcloud/cron.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: cron
         image: nextcloud:fpm
+        imagePullPolicy: Always
         command: ["/cron.sh"]
         env:
         - name: MYSQL_HOST
