--- a/nextcloud/db.yaml
+++ b/nextcloud/db.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: db
         image: mariadb
+        imagePullPolicy: Always
         env:
         - name: MYSQL_DATABASE
           value: nextcloud
