--- a/nextcloud/redis.yaml
+++ b/nextcloud/redis.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: redis
         image: redis
+        imagePullPolicy: Always
       restartPolicy: Always
 
 ---
