--- a/traefik/traefik-container.yaml
+++ b/traefik/traefik-container.yaml
@@ -22,20 +22,27 @@ spec:
         app: traefik
     spec:
       serviceAccountName: traefik-ingress-controller
+      hostNetwork: true
       containers:
       - name: traefik
         image: traefik:latest
         imagePullPolicy: Always
         args:
-#            - --log.level=DEBUG
-#            - --api.insecure
-#            - --api.dashboard
-#            - --accesslog
+            - --log.level=INFO
+            - --api.insecure
+            - --api.dashboard
+            - --accesslog
+            - --metrics=true
+            - --metrics.influxdb=true
+            - --metrics.influxdb.address=influxdb:8086
+            - --metrics.influxdb.protocol=http
+            - --metrics.influxdb.database=traefik
             - --entrypoints.web.Address=:80
             - --entrypoints.websecure.Address=:443
             - --entrypoints.influxdb.Address=:8086
             - --entrypoints.traefik.Address=:30002
-            - --entrypoints.transmission.Address=:51413/udp
+            - --entrypoints.transmissiontcp.Address=:51413
+            - --entrypoints.transmissionudp.Address=:51413/udp
             - --providers.kubernetescrd
             - --certificatesResolvers.myresolver.acme.dnsChallenge.provider=namecheap
             - --certificatesResolvers.myresolver.acme.email=alex.sever.h@gmail.com
@@ -51,6 +58,8 @@ spec:
           hostPort: 30002
         - containerPort: 8086
           hostPort: 8086
+        - containerPort: 51413
+          hostPort: 51413
         - containerPort: 51413
           hostPort: 51413
           protocol: UDP
