Home assistant liveness probes to 30 minutes

--- a/homeautomation/haas.yaml
+++ b/homeautomation/haas.yaml
@@ -27,8 +27,9 @@ spec:
           httpGet:
             path: /
             port: webui
-          initialDelaySeconds: 3600
-          periodSeconds: 30
+          initialDelaySeconds: 2160 # 30 minutes
+          periodSeconds: 60
+          timeoutSeconds: 15
       volumes:
         - name: config
           hostPath:
