--- a/homeautomation/openhab.yaml
+++ b/homeautomation/openhab.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: openhab
-        image: openhab/openhab:2.5.0
+        image: openhab/openhab:3.1.0-snapshot
         ports:
         - containerPort: 28080
         volumeMounts:
