--- a/nextcloud/app.yaml
+++ b/nextcloud/app.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: nextcloud:fpm
+        image: registry.tinker.haus/tinkernextcloud # nextcloud:fpm
         imagePullPolicy: Always
         env:
         - name: MYSQL_HOST
