--- a/nextcloud/cron.yaml
+++ b/nextcloud/cron.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: cron
-        image: nextcloud:fpm
+        image: registry.tinker.haus/tinkernextcloud # nextcloud:fpm
         imagePullPolicy: Always
         command: ["/cron.sh"]
         env:
