--- a/nextcloud/redis.yaml
+++ b/nextcloud/redis.yaml
@@ -21,6 +21,8 @@ spec:
       - name: redis
         image: redis
         imagePullPolicy: Always
+        ports:
+        - containerPort: 6379
       restartPolicy: Always
 
 ---
