--- a/services/jenkins.yaml
+++ b/services/jenkins.yaml
@@ -36,8 +36,9 @@ spec:
           httpGet:
             path: /login
             port: webui
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: 120
+          periodSeconds: 60
+          timeoutSeconds: 15
       volumes:
         - name: jenkins-home
           hostPath:
