[Unifi] Change data storage to SSD

--- a/services/unify.yaml
+++ b/services/unify.yaml
@@ -52,7 +52,7 @@ spec:
       volumes:
         - name: data
           hostPath:
-            path: /var/db/unifi
+            path: /servers/unifi/data
             type: DirectoryOrCreate
         - name: log
           hostPath:
