--- a/traefik/rbac.yaml
+++ b/traefik/rbac.yaml
@@ -38,6 +38,7 @@ rules:
       - ingressrouteudps
       - tlsoptions
       - tlsstores
+      - serverstransports
     verbs:
       - get
       - list
