Update IP whitelists

--- a/middlewares/ipwhitelist_plus_github.yaml
+++ b/middlewares/ipwhitelist_plus_github.yaml
@@ -6,12 +6,9 @@ spec:
   ipWhiteList:
     sourceRange:
       - 127.0.0.1/32
-      - 10.10.0.0/16
-      - 10.0.0.0/16
-      - 10.3.0.0/16
-      - 10.1.0.0/16
-      - 10.32.0.1/12
-   
+      - 10.0.0.0/8
+
+# github hosts
       - 192.30.252.0/22
       - 185.199.108.0/22
       - 140.82.112.0/20
