--- a/homeautomation/postgresql.yaml
+++ b/homeautomation/postgresql.yaml
@@ -48,11 +48,11 @@ spec:
   - port: 8080
     protocol: TCP
     targetPort: 8080
-    name: "tcp_port"
+    name: "tcp-port"
   - port: 5432
     protocol: TCP
     targetPort: 5432
-    name: "some_other_port"
+    name: "some-other-port"
   type: NodePort
   selector:
     app: postgresql
