Traefik stop asking about cloud

--- a/traefik/traefik.yaml
+++ b/traefik/traefik.yaml
@@ -29,6 +29,7 @@ spec:
         imagePullPolicy: Always
         args:
             - --log.level=INFO
+            - --pilot.dashboard=false
             - --api.insecure
             - --api.dashboard
             - --accesslog
