--- a/homeautomation/almond.yaml
+++ b/homeautomation/almond.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     matchLabels:
       app: almond
-  replicas: 1
+  replicas: 0
   template:
     metadata:
       labels:
@@ -23,16 +23,10 @@ spec:
         volumeMounts:
           - name: varlib
             mountPath: /var/lib/almond-server
-#        livenessProbe:
-#          httpGet:
-#            path: /
-#            port: webui
-#          initialDelaySeconds: 30
-#          periodSeconds: 3
       volumes:
         - name: varlib
           hostPath:
-            path: /servers/almond/varlib
+            path: /var/srv/homeautomation/almond/varlib
             type: DirectoryOrCreate
 
 ---
