--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: services
+  namespace: jenkins
 spec:
   selector:
     matchLabels:
@@ -12,12 +12,10 @@ spec:
     metadata:
       labels:
         app: jenkins
-      annotations:
-        container.apparmor.security.beta.kubernetes.io/jenkins: unconfined 
     spec:
       containers:
       - name: jenkins
-        image: registry.tinker.haus/tinkerjenkins:centos # jenkins/jenkins:centos
+        image: jenkins/jenkins:jdk11
         imagePullPolicy: Always
         ports:
         - name: webui
@@ -42,7 +40,7 @@ spec:
       volumes:
         - name: jenkins-home
           hostPath:
-            path: /servers/jenkins/home
+            path: /var/srv/services/jenkins
             type: DirectoryOrCreate
         - name: storage
           hostPath:
@@ -54,12 +52,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
-  namespace: services
+  namespace: jenkins
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
+    name: webinterface
+  - port: 50000
+    protocol: TCP
+    targetPort: 50000
+    name: slaveport
   type: NodePort
   selector:
     app: jenkins
@@ -68,7 +71,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: jenkins-ingressroute-auth
-  namespace: services
+  namespace: jenkins
 spec:
   entryPoints:
     - web
@@ -80,14 +83,14 @@ spec:
           port: 80
       middlewares:
         - name: default-ip-whitelist-plus-github-local@kubernetescrd
-        - name: services-strict-transport-security@kubernetescrd
-#        - name: redirect-redirect-to-https@kubernetescrd
+        - name: jenkins-strict-transport-security@kubernetescrd
+        - name: redirect-redirect-to-https@kubernetescrd
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: jenkins-ingressroute-auth-tls
-  namespace: services
+  namespace: jenkins
 spec:
   entryPoints:
     - websecure
@@ -99,20 +102,21 @@ spec:
           port: 80
       middlewares:
         - name: default-ip-whitelist-plus-github-local@kubernetescrd
-        - name: services-strict-transport-security@kubernetescrd
-#        - name: redirect-redirect-to-https@kubernetescrd
+        - name: jenkins-strict-transport-security@kubernetescrd
+        - name: redirect-redirect-to-https@kubernetescrd
   tls:
     certResolver: myresolver
     domains:
     - main: "tinker.haus"
       sans:
       - "*.tinker.haus"
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: strict-transport-security
-  namespace: services
+  namespace: jenkins
 spec:
   headers:
     sslRedirect: true
