--- a/homeautomation/influxdb.yaml
+++ b/homeautomation/influxdb.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: influxdb
         image: influxdb
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 8086
           protocol: TCP
