--- a/nextcloud/app.yaml
+++ b/nextcloud/app.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: app
         image: registry.tinker.haus/tinkernextcloud # nextcloud:fpm
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         command: ["/usr/bin/ionice"]
         args: ["-c", "2", "-n", "2", "/entrypoint.sh", "php-fpm"]
         env:
