--- a/games/valheim_lumberjack.yaml
+++ b/games/valheim_lumberjack.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: valheim-lumberjack
         image: lloesche/valheim-server
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 12456
           protocol: UDP
