--- a/homeautomation/grafana.yaml
+++ b/homeautomation/grafana.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: grafana
         image: monitoringartist/grafana-xxl:7.1 # grafana/grafana
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 3000
         volumeMounts:
