--- a/homeautomation/nut-http.yaml
+++ b/homeautomation/nut-http.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: nut-http
         image: deetoreu/nut-http:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 3001
 #        volumeMounts:
