--- a/homeautomation/openhab.yaml
+++ b/homeautomation/openhab.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: openhab
         image: openhab/openhab:3.1.0-snapshot
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 28080
         volumeMounts:
