--- a/homeautomation/postgresql.yaml
+++ b/homeautomation/postgresql.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: postgresql
         image: postgres
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         env:
         - name: POSTGRES_PASSWORD_FILE
           value: /var/lib/postgresql/password
