--- a/homeautomation/telegraf.yaml
+++ b/homeautomation/telegraf.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: telegraf
         image: telegraf
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         args: ["--debug"]
         env:
           - name: HOST_ETC
