--- a/nextcloud/preview.yaml
+++ b/nextcloud/preview.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: preview
         image: registry.tinker.haus/tinkernextcloud # nextcloud:fpm
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         command: ['sh', '-c', "echo '*/10 * * * * /var/www/html/occ preview:pre-generate -vvvv' > /var/spool/cron/crontabs/www-data && /cron.sh"]
         env:
         - name: MYSQL_HOST
