--- a/nextcloud/web-frontend.yaml
+++ b/nextcloud/web-frontend.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: web-frontend
         image: nginx
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 80
         env:
