--- a/services/unify.yaml
+++ b/services/unify.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: unifi
         image: jacobalberty/unifi:stable-6
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 3478  # UDP Port used for STUN.
           protocol: UDP
